--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,13 @@
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix 'C-\'
+bind-key 'C-\' send-prefix
+
+set -g status-style "bg=magenta"
+
+set -g pane-active-border-style bg=magenta,fg=red
+set -g pane-border-style fg=red
+
 # # Set vi keybindings
 set -g mode-keys vi
 set -g status-keys vi
@@ -63,41 +73,41 @@ bind C-e command-prompt -p "Command:" \
 set -g base-index 1
 setw -g pane-base-index 1
 
-# switch panes using Alt-hjkl without prefix
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# # switch panes using Alt-hjkl without prefix
+# bind -n M-h select-pane -L
+# bind -n M-j select-pane -D
+# bind -n M-k select-pane -U
+# bind -n M-l select-pane -R
 
-# switch windows using numbers without prefix
-bind -n M-1 select-window -t:1
-bind -n M-2 select-window -t:2
-bind -n M-3 select-window -t:3
-bind -n M-4 select-window -t:4
-bind -n M-5 select-window -t:5
-bind -n M-6 select-window -t:6
-bind -n M-7 select-window -t:7
-bind -n M-8 select-window -t:8
-bind -n M-9 select-window -t:9
+# # switch windows using numbers without prefix
+# bind -n M-1 select-window -t:1
+# bind -n M-2 select-window -t:2
+# bind -n M-3 select-window -t:3
+# bind -n M-4 select-window -t:4
+# bind -n M-5 select-window -t:5
+# bind -n M-6 select-window -t:6
+# bind -n M-7 select-window -t:7
+# bind -n M-8 select-window -t:8
+# bind -n M-9 select-window -t:9
 
-# switch windows using numbers without prefix
-bind -n M-! join-pane -h -t :1
-bind -n M-@ join-pane -h -t :2
-bind -n M-# join-pane -h -t :3
-bind -n M-$ join-pane -h -t :4
-bind -n M-% join-pane -h -t :5
-bind -n M-^ join-pane -h -t :6
-bind -n M-& join-pane -h -t :7
-bind -n M-* join-pane -h -t :8
-bind -n M-( join-pane -h -t :9
+# # switch windows using numbers without prefix
+# bind -n M-! join-pane -h -t :1
+# bind -n M-@ join-pane -h -t :2
+# bind -n M-# join-pane -h -t :3
+# bind -n M-$ join-pane -h -t :4
+# bind -n M-% join-pane -h -t :5
+# bind -n M-^ join-pane -h -t :6
+# bind -n M-& join-pane -h -t :7
+# bind -n M-* join-pane -h -t :8
+# bind -n M-( join-pane -h -t :9
 
 # move panes using Alt-{} without prefix
-bind -n M-\{ swap-pane -U
-bind -n M-\} swap-pane -D
+bind -n M-[ swap-pane -U
+bind -n M-] swap-pane -D
 
 # swap windows
-bind -n M-< { swap-window -t -1; select-window -t -1 }
-bind -n M-> { swap-window -t +1; select-window -t +1 }
+bind -n M-\{ { swap-window -t -1; select-window -t -1 }
+bind -n M-\} { swap-window -t +1; select-window -t +1 }
 
 # don't rename windows automatically
 set-option -g allow-rename off
