tmux: Update keybindings to be compatible with emacs in terminal

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set -g mouse on
 
 set-option -s set-clipboard off
 
-bind -n M-s copy-mode
+bind -n M-S copy-mode
 
 # set copy mode vi commands
 # brew install reattach-to-user-namespace
@@ -53,8 +53,8 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # choose copy buffer
-bind -n M-p paste-buffer
-bind -n M-m choose-buffer
+bind -n M-P paste-buffer
+bind -n M-M choose-buffer
 
 # Middle click to paste from the clipboard
 unbind-key MouseDown2Pane
