tmux: Update tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,9 @@
-# remap prefix from 'C-b' to 'C-a'
+# remap prefix from 'C-b' to 'C-\'
 unbind C-b
 set-option -g prefix 'C-\'
 bind-key 'C-\' send-prefix
 
-set -g status-style "bg=magenta"
+set -g status-style bg=magenta,fg=white
 
 set -g pane-active-border-style bg=magenta,fg=red
 set -g pane-border-style fg=red
@@ -13,7 +13,7 @@ set -g default-terminal xterm-256color
 # turn off utf-8 mouse input, comment this out if tmux version >=2.2
 # set -g mouse-utf8 off
 
-# MacOS using zsh. 
+# MacOS using zsh.
 if-shell "uname | grep -q Darwin" "set-option -g default-shell /bin/zsh" \
     "set-option -g default-shell /bin/bash"
 
@@ -41,9 +41,8 @@ if-shell "uname | grep -q Darwin" \
 unbind -T copy-mode MouseDragEnd1Pane
 
 # Copy mode shortcuts
-bind -n M-C copy-mode
 bind -n M-P paste-buffer
-bind -n M-N choose-buffer
+bind -n M-C choose-buffer
 
 # Middle click to paste from the clipboard
 unbind-key MouseDown2Pane
@@ -110,4 +109,3 @@ set-option -g renumber-windows on
 # bind -n M-& join-pane -h -t :7
 # bind -n M-* join-pane -h -t :8
 # bind -n M-( join-pane -h -t :9
-
