--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,10 @@
 # remap prefix from 'C-b' to 'C-\'
-unbind C-b
-set-option -g prefix 'C-\'
-bind-key 'C-\' send-prefix
+# unbind C-b
+# set-option -g prefix 'C-\'
+# bind-key 'C-\' send-prefix
+set-option -g prefix 'C-b'
+bind-key 'C-b' send-prefix
+
 
 set -g status-style bg=magenta,fg=white
 
