tmux: Update tmux configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,14 +1,8 @@
-# remap prefix from 'C-b' to 'C-\'
-# unbind C-b
-# set-option -g prefix 'C-\'
-# bind-key 'C-\' send-prefix
 set-option -g prefix 'C-b'
 bind-key 'C-b' send-prefix
 
-
-set -g status-style bg=magenta,fg=white
-
-set -g pane-active-border-style bg=magenta,fg=red
+set -g status-style bg=green,fg=white
+set -g pane-active-border-style bg=green,fg=red
 set -g pane-border-style fg=red
 
 # remember to add 'alias="tmux -2"' in .bashrc and .zshrc
@@ -20,6 +14,7 @@ set -g default-terminal xterm-256color
 if-shell "uname | grep -q Darwin" "set-option -g default-shell /bin/zsh" \
     "set-option -g default-shell /bin/bash"
 
+# Remove the delay with escape key
 set -sg escape-time 0
 
 # mouse settings
@@ -33,6 +28,7 @@ set-option -s set-clipboard off
 set -g mode-keys emacs
 set -g status-keys emacs
 
+# MacOS change
 if-shell "uname | grep -q Darwin" \
     "bind -T copy-mode C-w send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'" \
     "bind -T copy-mode C-w send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard > /dev/null'"
