--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/vim-ttcn"]
 	path = submodules/vim-ttcn
 	url = https://github.com/gustafj/vim-ttcn.git
+[submodule "submodules/seoul256.vim"]
+	path = submodules/seoul256.vim
+	url = https://github.com/junegunn/seoul256.vim.git
