tmux: Update tmux configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 set-option -g prefix 'C-b'
 bind-key 'C-b' send-prefix
 
-set -g status-style bg=green,fg=white
+set -g status-style bg=green,fg=black
 set -g pane-active-border-style bg=green,fg=red
 set -g pane-border-style fg=red
 
