--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/seoul256.vim"]
 	path = submodules/seoul256.vim
 	url = https://github.com/junegunn/seoul256.vim.git
+[submodule "submodules/neoformat"]
+	path = submodules/neoformat
+	url = https://github.com/sbdchd/neoformat
