nvim: Add nvim-web-devicons
Also install patched font-hack-nerd-font to display the icons

https://github.com/ryanoasis/vim-devicons/issues/198

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "submodules/nvim-tree.lua"]
 	path = submodules/nvim-tree.lua
 	url = https://github.com/kyazdani42/nvim-tree.lua
+[submodule "submodules/nvim-web-devicons"]
+	path = submodules/nvim-web-devicons
+	url = https://github.com/kyazdani42/nvim-web-devicons
