tmux: Update configuration
Fix vim background colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,8 @@ set -g pane-active-border-style bg=green,fg=red
 set -g pane-border-style fg=red
 
 # remember to add 'alias="tmux -2"' in .bashrc and .zshrc
-set -g default-terminal xterm-256color
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # turn off utf-8 mouse input, comment this out if tmux version >=2.2
 # set -g mouse-utf8 off
 
