--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/seoul256.vim"]
 	path = submodules/seoul256.vim
 	url = https://github.com/junegunn/seoul256.vim.git
+[submodule "submodules/nerdtree"]
+	path = submodules/nerdtree
+	url = https://github.com/preservim/nerdtree.git
