--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,9 @@
 [submodule "submodules/vim-lsp-settings"]
 	path = vim/.vim/pack/plugins/start/vim-lsp-settings
 	url = https://github.com/mattn/vim-lsp-settings.git
+[submodule "vim/.vim/pack/plugins/start/asyncomplete.vim"]
+	path = vim/.vim/pack/plugins/start/asyncomplete.vim
+	url = https://github.com/prabirshrestha/asyncomplete.vim.git
+[submodule "vim/.vim/pack/plugins/start/asyncomplete-lsp.vim"]
+	path = vim/.vim/pack/plugins/start/asyncomplete-lsp.vim
+	url = https://github.com/prabirshrestha/asyncomplete-lsp.vim.git
