--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,8 +22,8 @@ set -sg escape-time 0
 # Make mouse useful in copy mode
 set -g mouse on
 
-# avoid weird characters
-set-option -s set-clipboard off
+# Enable osc 52
+set -s set-clipboard on
 
 # Set emacs keybindings
 set -g mode-keys emacs
