tmux: Change prefix to Ctrl-ö

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-set-option -g prefix 'C-b'
-bind-key 'C-b' send-prefix
+set-option -g prefix 'C-ö'
+bind-key 'C-ö' send-prefix
 
 set -g status-style bg=green,fg=black
 set -g pane-active-border-style bg=green,fg=red
