tmux: Allow passthrough
Enable this so that osc 52 works in wezterm in macos

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,6 +24,7 @@ set -g mouse on
 
 # Enable osc 52
 set -s set-clipboard on
+set -g allow-passthrough on
 
 # Set emacs keybindings
 set -g mode-keys emacs
