vim: Add vimwiki plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vim/.vim/pack/plugins/start/vim-choosewin"]
 	path = vim/.vim/pack/plugins/start/vim-choosewin
 	url = https://github.com/t9md/vim-choosewin.git
+[submodule "vim/.vim/pack/plugins/start/vimwiki"]
+	path = vim/.vim/pack/plugins/start/vimwiki
+	url = https://github.com/vimwiki/vimwiki.git
