--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-set-option -g prefix 'C-t'
-bind-key 'C-t' send-prefix
+set-option -g prefix 'C-b'
+bind-key 'C-b' send-prefix
 
 set -g status-style bg=green,fg=black
 set -g pane-active-border-style bg=green,fg=red
@@ -42,8 +42,9 @@ if-shell "uname | grep -q Darwin" \
 unbind -T copy-mode MouseDragEnd1Pane
 
 # Copy mode shortcuts
-bind -n M-P paste-buffer
-bind -n M-C choose-buffer
+bind -n 'M-r' source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind -n 'M-p' paste-buffer
+bind -n 'M-c' choose-buffer
 
 # Middle click to paste from the clipboard
 unbind-key MouseDown2Pane
@@ -56,12 +57,12 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # move panes using Alt-{} without prefix
-bind -n M-[ swap-pane -U
-bind -n M-] swap-pane -D
+bind -n 'M-u' swap-pane -U
+bind -n 'M-d' swap-pane -D
 
 # swap windows
-bind -n M-\{ { swap-window -t -1; select-window -t -1 }
-bind -n M-\} { swap-window -t +1; select-window -t +1 }
+bind -n 'M-b' { swap-window -t -1; select-window -t -1 }
+bind -n 'M-f' { swap-window -t +1; select-window -t +1 }
 
 # don't rename windows automatically
 set-option -g allow-rename off
