vim: Add vim-osc52

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/.vim/pack/plugins/start/vimwiki"]
 	path = vim/.vim/pack/plugins/start/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
+[submodule "vim/.vim/pack/plugins/start/vim-osc52"]
+	path = vim/.vim/pack/plugins/start/vim-osc52
+	url = https://github.com/fcpg/vim-osc52
