tmux, wezterm: Update so that alt-{f,b,<-,->} work in terminal

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,8 +61,8 @@ bind -n 'M-u' swap-pane -U
 bind -n 'M-d' swap-pane -D
 
 # swap windows
-bind -n 'M-b' { swap-window -t -1; select-window -t -1 }
-bind -n 'M-f' { swap-window -t +1; select-window -t +1 }
+bind -n 'M-n' { swap-window -t -1; select-window -t -1 }
+bind -n 'M-m' { swap-window -t +1; select-window -t +1 }
 
 # don't rename windows automatically
 set-option -g allow-rename off
